--- a/package.json
+++ b/package.json
@@ -11,45 +11,45 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.52.0",
-    "expo": "~52.0.0",
-    "expo-blur": "~14.1.5",
-    "expo-checkbox": "~4.1.4",
+    "expo": "^52.0.47",
+    "expo-blur": "~14.0.3",
+    "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.8",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
-    "expo-linear-gradient": "~14.1.5",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.7",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
-    "react": "18.2.0",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-otp-entry": "^1.8.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~8.0.1",
     "typescript": "~5.8.3"
   },
   "private": true
